--- a/docs/stylesrc/stylus/cinder_docs.styl
+++ b/docs/stylesrc/stylus/cinder_docs.styl
@@ -390,7 +390,7 @@ span.slash
 		
 	.columns
 		padding: 0.7rem 1.0rem
-		overflow-x: scroll;
+		overflow-x: auto;
 		
 		&:not(:last-child)
 			border-right: #fff 1px solid
@@ -716,7 +716,7 @@ button.interactive-guide
 		> ul
 			padding: 10px 0 0 0
 			max-height: 500px
-			overflow-y: scroll
+			overflow-y: auto
 			
 			ul
 				margin: 5px -15px 0
